<resources>
    <string name="app_name">ASPERDA &amp; MITRA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="simpan">Simpan</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Welcome1!</string>
    <string name="slide_1_desc">Welcome Slide 1!</string>

    <string name="slide_2_title">Hello Welcome2!</string>
    <string name="slide_2_desc">Welcome Slide 2!</string>

    <string name="slide_3_title">Hello Welcome3!</string>
    <string name="slide_3_desc">Welcome Slide 3!</string>

    <string name="slide_4_title">Hello Welcome4</string>
    <string name="slide_4_desc">Welcome Slide 4!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="anggota_asperda_terdekat">Anggota ASPERDA terdekat</string>
    <string name="mitra_asperda_terdekat">Mitra ASPERDA terdekat</string>
    <string name="detail">Details</string>
    <string name="produk">Produk</string>
    <string name="lokasi">Lokasi</string>
    <string name="hubungi">Hubungi</string>
    <string name="tinggalkan_pesan">Tinggalkan Pesan</string>
    <string name="login">Masuk</string>
    <string name="login_google">Login dengan Google</string>
    <string name="login_facebook">Login dengan facebook</string>
    <string name="belum_member">Belum jadi member? <b>Daftar sekarang</b></string>
    <string name="judul_registrasi">Daftar Rent Car Indonesia</string>
    <string name="judul_setting">Account Setting</string>

    <string name="facebook_app_id">102466333572783</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Nama lengkap</string>
    <string name="prompt_alamat">Alamat</string>
    <string name="prompt_nomor">Nomor Handphone</string>
    <string name="prompt_nama_perusahaan">Nama Perusahaan</string>
    <string name="prompt_input_ulang">Input Ulang Password</string>
    <string name="prompt_kode_pos">Kode Pos</string>
    <string name="prompt_nomorTlp1">No Telephone 1</string>
    <string name="prompt_nomorTlp2">No Telephone 2</string>
    <string name="prompt_nomor_fax">No Fax</string>
    <string name="prompt_website">Website</string>
    <string name="prompt_tahun_berdiri">Tahun Berdiri</string>
    <string name="prompt_jumlah_kendaraan">Jumlah Kendaraan Total</string>
    <string name="prompt_asosiasi">Asosiasi yang diikuti</string>
    <string name="prompt_contact">Contact Person</string>
    <string name="prompt_contact_phone">Contact Person Phone</string>
    <string name="daftar">Daftar</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
