<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"

    tools:context="id.ptechnology.asperda_dan_mitra_kerja.login.view.LoginFragment">


    <TextView
        android:padding="10dp"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

       android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textColorHint="@android:color/white"

            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:passwordToggleTint="@android:color/darker_gray"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"

            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:backgroundTint="@color/blue"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:background="@color/blue"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:text="@string/login"/>


    <Button
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_google"/>


    <Button
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"/>

    <Button
        android:textColor="@android:color/white"
        android:id="@+id/register"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_member"/>

</LinearLayout>
