<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="id.anterin.asperda_dan_mitra_kerja.registrasi.RegistrasiFragment">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul_registrasi" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"

            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"

            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_alamat"

            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nomor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nomor"

            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nama_perusahaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nama_perusahaan"

            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:passwordToggleEnabled="false"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:backgroundTint="@android:color/white"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"

            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:passwordToggleEnabled="false"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_ulang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_input_ulang"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:backgroundTint="@android:color/white"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"

            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/daftar"/>

</LinearLayout>
