<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    android:background="@android:color/white"
    tools:context="id.ptechnology.asperda_dan_mitra_kerja.account.view.AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/textBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_setting" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_namaPerusahaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nama_perusahaan"



            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_alamat"



            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginLeft="3dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kota"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="@drawable/bg_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinnerKota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></Spinner>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_kodePos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_kode_pos"



            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_noTelp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nomorTlp1"



            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_noTelp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nomorTlp2"



            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_noFax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nomor_fax"



            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"



            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_website"



            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
        <TextView

            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bentuk Perusahaan"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="@drawable/bg_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinnerPerusahaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></Spinner>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_tahun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_tahun_berdiri"



            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_jumlahKendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_jumlah_kendaraan"



            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_asosiasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_asosiasi"



            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_contact"



            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_contactPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_contact_phone"



            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/simpan"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
