<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ptechnology.asperda_dan_mitra_kerja.detailDashboard.view.DetailListClickFragment">

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/tab_detail"
            android:background="@drawable/bg_tab_selected"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"></View>

    <LinearLayout
        android:id="@+id/tab_produk"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/bg_tab_default"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produk"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"></View>

    <LinearLayout
        android:id="@+id/tab_lokasi"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/bg_tab_default"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi"/>
        </LinearLayout>

    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.view.ViewPager
        android:layout_below="@id/layout_tab"
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />

</RelativeLayout>
